--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<!-- author: Hoang Duong Nguyen -->
 <!-- simple Ant build script -->
 
 <project name="Clicap" default="default" basedir=".">
